--- a/Museek/InterfaceBuilder/Main.storyboard
+++ b/Museek/InterfaceBuilder/Main.storyboard
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="N1r-n3-7a5">
-    <device id="retina5_5" orientation="portrait">
+    <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -22,56 +24,16 @@
                         </userDefinedRuntimeAttributes>
                     </tabBar>
                     <connections>
-                        <segue destination="VZd-jW-aHi" kind="relationship" relationship="viewControllers" id="GhH-Ox-sXl"/>
-                        <segue destination="dDZ-cQ-53Y" kind="relationship" relationship="viewControllers" id="cmK-Qa-Mla"/>
+                        <segue destination="gGJ-XM-wWh" kind="relationship" relationship="viewControllers" id="MJW-FC-cGs"/>
+                        <segue destination="LNF-Pe-HXA" kind="relationship" relationship="viewControllers" id="lYZ-3P-Vea"/>
                         <segue destination="ixO-iP-wjZ" kind="relationship" relationship="viewControllers" id="Vbp-8G-8xc"/>
-                        <segue destination="MTX-ld-2jB" kind="relationship" relationship="viewControllers" id="evF-mt-kfv"/>
-                        <segue destination="ixy-bZ-ATw" kind="relationship" relationship="viewControllers" id="pg3-GC-SiZ"/>
+                        <segue destination="NXL-rb-FWZ" kind="relationship" relationship="viewControllers" id="dRm-wD-osO"/>
+                        <segue destination="u7x-Bq-dKz" kind="relationship" relationship="viewControllers" id="wlX-Jl-aNt"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BT7-nc-Evh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1025" y="-237"/>
-        </scene>
-        <!--NavFeed-->
-        <scene sceneID="f2O-Hb-Hy0">
-            <objects>
-                <viewControllerPlaceholder storyboardName="Feed" referencedIdentifier="NavFeed" id="VZd-jW-aHi" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="5xs-5T-zQo"/>
-                </viewControllerPlaceholder>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Fgg-BU-mKV" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-1462" y="319"/>
-        </scene>
-        <!--NavDiscover-->
-        <scene sceneID="rY4-As-BWC">
-            <objects>
-                <viewControllerPlaceholder storyboardName="Discover" referencedIdentifier="NavDiscover" id="dDZ-cQ-53Y" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="48H-QB-fVA"/>
-                </viewControllerPlaceholder>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Txp-rf-WVx" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-1264" y="318"/>
-        </scene>
-        <!--NavNotifications-->
-        <scene sceneID="j6J-UY-kbR">
-            <objects>
-                <viewControllerPlaceholder storyboardName="Notifications" referencedIdentifier="NavNotifications" id="MTX-ld-2jB" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="c0j-LS-DQS"/>
-                </viewControllerPlaceholder>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dbK-qa-x90" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-806" y="318"/>
-        </scene>
-        <!--NavProfile-->
-        <scene sceneID="OiQ-wf-hDV">
-            <objects>
-                <viewControllerPlaceholder storyboardName="Profile" referencedIdentifier="NavProfile" id="ixy-bZ-ATw" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="M4H-ou-3sO"/>
-                </viewControllerPlaceholder>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="RFl-0m-9Ei" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-610" y="318"/>
         </scene>
         <!--NavCamera-->
         <scene sceneID="2Fy-ma-PrN">
@@ -81,8 +43,172 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Rer-ea-6tA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1025" y="319"/>
+            <point key="canvasLocation" x="-1027" y="316"/>
+        </scene>
+        <!--[LOGO]-->
+        <scene sceneID="GGG-9d-Aci">
+            <objects>
+                <viewController id="Hn7-PE-qLC" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="27b-dY-jz6">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="k35-H8-yVO"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="[LOGO]" id="MvI-LA-OGr"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="blk-mO-1zL" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2662" y="1346"/>
+        </scene>
+        <!--Feed-->
+        <scene sceneID="fYv-1I-J89">
+            <objects>
+                <navigationController storyboardIdentifier="NavFeed" title="Feed" automaticallyAdjustsScrollViewInsets="NO" id="gGJ-XM-wWh" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="" image="stage" selectedImage="stage (filled)" id="EBg-ES-d2M">
+                        <inset key="imageInsets" minX="0.0" minY="0.0" maxX="0.0" maxY="-10"/>
+                    </tabBarItem>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="black" id="i4U-gJ-oRQ">
+                        <rect key="frame" x="0.0" y="44" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" name="AppAccent"/>
+                        </textAttributes>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Hn7-PE-qLC" kind="relationship" relationship="rootViewController" id="nJ8-o7-5ly"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="nIV-8L-2Nd" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2663" y="607"/>
+        </scene>
+        <!--Discover-->
+        <scene sceneID="UMK-aA-qqh">
+            <objects>
+                <viewController id="ofw-s4-JZb" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="muf-vv-Uot">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="UJP-K1-8OT"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Discover" id="A9A-F4-Etl"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kXk-4u-OBy" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1735" y="1346"/>
+        </scene>
+        <!--Discover-->
+        <scene sceneID="w1a-8c-jYH">
+            <objects>
+                <navigationController storyboardIdentifier="NavDiscover" title="Discover" automaticallyAdjustsScrollViewInsets="NO" hidesBarsOnSwipe="YES" id="LNF-Pe-HXA" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="" image="explore" selectedImage="explore (filled)" id="nlK-J7-Yh8">
+                        <inset key="imageInsets" minX="0.0" minY="0.0" maxX="0.0" maxY="-10"/>
+                    </tabBarItem>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="black" id="k2n-bN-buh">
+                        <rect key="frame" x="0.0" y="44" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="ofw-s4-JZb" kind="relationship" relationship="rootViewController" id="8sa-Ma-SjS"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="AxH-p3-7w2" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1735" y="607"/>
+        </scene>
+        <!--Notifications-->
+        <scene sceneID="jof-ky-YDK">
+            <objects>
+                <viewController id="cZr-gd-f1g" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="6de-l9-q5D">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="Tvn-qX-ign"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Notifications" id="Hza-ms-xV1"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="u7P-KW-ppF" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-383" y="1346"/>
+        </scene>
+        <!--Notifications-->
+        <scene sceneID="bVZ-EE-Uk6">
+            <objects>
+                <navigationController storyboardIdentifier="NavNotifications" title="Notifications" automaticallyAdjustsScrollViewInsets="NO" hidesBarsOnSwipe="YES" id="NXL-rb-FWZ" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="" image="support" selectedImage="support (filled)" id="g4B-La-g7Y">
+                        <inset key="imageInsets" minX="0.0" minY="0.0" maxX="0.0" maxY="-10"/>
+                    </tabBarItem>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="black" id="F8o-Ef-eHg">
+                        <rect key="frame" x="0.0" y="44" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="cZr-gd-f1g" kind="relationship" relationship="rootViewController" id="ug5-sF-vAU"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="thU-Ex-igK" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-383" y="607"/>
+        </scene>
+        <!--[Username]-->
+        <scene sceneID="Fns-Mh-voW">
+            <objects>
+                <viewController id="8g0-E8-Vab" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="eG6-sp-Eil">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="6n9-BV-7vw"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="[Username]" id="PVl-p6-vIA"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ply-tg-UkG" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="625" y="1346"/>
+        </scene>
+        <!--Profile-->
+        <scene sceneID="3CB-OS-K7L">
+            <objects>
+                <navigationController storyboardIdentifier="NavProfile" title="Profile" automaticallyAdjustsScrollViewInsets="NO" id="u7x-Bq-dKz" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="" image="profile" selectedImage="profile (filled)" id="UG8-K8-3zf">
+                        <inset key="imageInsets" minX="0.0" minY="0.0" maxX="0.0" maxY="-10"/>
+                    </tabBarItem>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="black" id="JSq-aF-Xvu">
+                        <rect key="frame" x="0.0" y="44" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="8g0-E8-Vab" kind="relationship" relationship="rootViewController" id="0M0-6w-XM6"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="JPe-hy-mHD" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="625" y="607"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="explore" width="25" height="25"/>
+        <image name="explore (filled)" width="25" height="25"/>
+        <image name="profile" width="25" height="25"/>
+        <image name="profile (filled)" width="25" height="25"/>
+        <image name="stage" width="25" height="25"/>
+        <image name="stage (filled)" width="25" height="25"/>
+        <image name="support" width="25" height="25"/>
+        <image name="support (filled)" width="25" height="25"/>
+        <namedColor name="AppAccent">
+            <color red="0.92941176470588238" green="0.40392156862745099" blue="0.52549019607843139" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+        </namedColor>
+    </resources>
     <color key="tintColor" name="AppAccent"/>
 </document>
